Line shake if the attempt is not correct

--- a/src/App.css
+++ b/src/App.css
@@ -175,3 +175,22 @@ body {
   }
 
 }
+
+@keyframes bounce-x {
+  0% {
+    transform: translateX(0%);
+  }
+
+  33% {
+    transform: translateX(-10%);
+  }
+
+  66% {
+    transform: translateX(+10%);
+  }
+
+  100% {
+    transform: translateX(0%);
+  }
+
+}
